# app-automate

./: .gitignore  README.md  app-automate.settings.example.toml  pyproject.toml
demos/: paint_car.py
docs/: architecture.md  mvp-roadmap.md  new-app-guide.md  windows-integration.md
examples/profiles/camera-demo/: profile.json
examples/profiles/outlook-windows-classic/: README.md  profile.json
examples/profiles/pages/: anchor_review.json  mapping_error.attempt-1.txt  mapping_output.attempt-2.json  mapping_request.json  profile.json
examples/profiles/paint-demo/: profile.json
examples/profiles/photo-booth/: mapping_request.json  profile.json
examples/profiles/photo-booth-trained/: mapping_error.attempt-1.txt  mapping_error.attempt-2.txt  mapping_output.attempt-1.json  mapping_output.attempt-2.json  mapping_request.json
src/app_automate/: __init__.py  cli.py
src/app_automate/accessibility/: __init__.py  cdp.py  macos_ax.py  models.py  windows_uia.py
src/app_automate/adapters/: __init__.py  base.py  macos.py  pyautogui_adapter.py  windows_input.py
src/app_automate/builder/: __init__.py  anchor_crop.py  capture.py  grid.py  llm_mapper.py  models.py  prompt.py  semantic_profile.py  training.py  window_capture.py
src/app_automate/config/: __init__.py  models.py  schema.py  settings.py  validation.py
src/app_automate/debug/: __init__.py  inspect.py  overlay.py
src/app_automate/runner/: __init__.py  actions.py  anchors.py  (+3 more)
tests/: test_builder_training.py  test_cli.py  test_config_models.py  test_runtime_detection.py  test_settings.py  test_transform.py
(+3 files in other folders)
